package edu.hitsz.basic;

public interface Bomb {
    /**
     * 订阅者更新自己状态
     */
    public void update();
}
